--- a/notebooks/1DS.ipynb
+++ b/notebooks/1DS.ipynb
@@ -658,7 +658,7 @@
    ],
    "source": [
     "print(df[\"defects\"].value_counts())\n",
-    "print(df[\"defects\"].value_counts(normalize=True))\n"
+    "print(df[\"defects\"].value_counts(normalize=True))"
    ]
   },
   {
